# parallel-programming-examples

./: README.md
cpp/thread-pool/: REFERENCES.md  ThreadPool.hpp  main.cpp  run.sh
dining-philosophers-problem/: README.md  REFERENCES.md  compile-and-run.sh  draft.ora  phil.c  report.doc
itas-pstu-ru/: README.md  REFERENCES.md
itas-pstu-ru/lab2/lab2-1/: lab2-1.c  lab2-1.sh
itas-pstu-ru/lab2/lab2-2/: lab2-2.c  lab2-2.sh
itas-pstu-ru/lab2/lab2-3/: lab2-3.c  lab2-3.sh
itas-pstu-ru/lab2/lab2-var3/: lab2-var3.doc  program.c  program.sh
itas-pstu-ru/lab3/lab3-1/: lab3-1.c  lab3-1.sh
itas-pstu-ru/lab3/lab3-2/: lab3-2.c  lab3-2.sh
itas-pstu-ru/lab3/lab3-var8/: lab3-var8.doc  program.c  program.sh
itas-pstu-ru/lab4/lab4-1/: lab4-1.c  lab4-1.sh
itas-pstu-ru/lab4/lab4-2/: lab4-2.c  lab4-2.sh
itas-pstu-ru/lab4/lab4-3/: lab4-3.c  lab4-3.sh
itas-pstu-ru/lab4/lab4-4/: lab4-4.c  lab4-4.sh
itas-pstu-ru/lab4/lab4-var7/: lab4-var7.doc  program.c
itas-pstu-ru/lab5/: REFERENCES.md  ОТЧЕТ ПО СЕМЕСТРОВОЙ.doc
itas-pstu-ru/lab5/lab5-2/: README.md  lab5-2.c  lab5-2.sh
itas-pstu-ru/lab5/lab5-var5/: README.md  lab5-var5.doc  program.c  program.sh
itas-pstu-ru/lab7/: REFERENCES.md
itas-pstu-ru/lab7/lab7-var3/: README.md
itas-pstu-ru/lab7/lab7-var3/omp_trap1/: omp_trap1.c  omp_trap1.doc  omp_trap1.sh
marl/: REFERENCES.md  get-marl.sh
marl/example/: CMakeLists.txt  main.cc
marl/main-thread-is-not-a-worker/: CMakeLists.txt  main.cc
palindrome-pthreads/: README.md  REFERENCES.md  compile-and-run.sh  program.c  report.doc
